<resources>
    <string name="app_name">MoneyCircle</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_new_entry">NEW</string>

    <string name="welcome">Welcome!</string>
    <string name="start">Start</string>
    <string name="activity_contact_us">ContactUs</string>
    
        <!--Registration and Login Related String-->
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="dob">DOB</string>
    <string name="enter_date">Enter Date</string>
    <string name="activity_register_and_SignIn">Register/SignIn</string>
    <string name="google_plus">Google Plus</string>
    <string name="facebook">Facebook</string>
    <string name="authentication_text"><big><big><b>Authentication</b></big></big>\n<small>Please authenticate by selecting google or facebook login.</small></string>
    <string name="email">Email</string>

    <string name="title_activity_set_split_amount">Set Split Amount</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_manage_categories">Manage Categories</string>
    <string name="activity_View_And_Edit_Profile">Edit Profile</string>
    <string name="activity_Set_new_password">Change Password</string>

    <string name="category_group_id">group id</string>
    <string name="category_child_id">child id</string>
    <string name="title_activity_view_and_edit_profle">Edit Profile</string>
    <string name="title_activity_set_new_password">Change Password</string>
    <string name="activity_setting">Settings</string>
    <string name="daily_reminder_setting"><big>Daily Reminder</big>\n<small>Set a schedule to remind for entry</small></string>
    <string name="password_setting"><big>Password</big>\n<small>Set password to secure your data</small></string>
    <string name="categories_setting"><big>Categories</big>\n<small>Manage your Categories</small></string>
    <string name="profile_setting"><big>Profile</big>\n<small>Manage your profile</small></string>
    <string name="title_activity_split_tool">Split Tool</string>
    <string name="title_activity_chooser">Select</string>

    <string name="activity_contact_and_circle">Contact &amp; Circle Activity</string>
    <string name="categories">Category</string>
    <string name="invite_contact">Invite Contacts</string>
    <string name="create_new_circle">Create New Circle</string>
    <string name="title_activity_add_new_entry">New Entry</string>
    	<!--Diary Related Strings-->
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="borrowed">Borrowed</string>
    <string name="lended">Lended</string>
    <string name="split">Split</string>
    <string name="action_add">Add</string>
    <string name="diary">Personal Diary</string>
    
    <array name="list_add_new_entry">
        <item>@string/income</item>
        <item>@string/expense</item>
        <item>@string/borrowed</item>
        <item>@string/lended</item>
        <item>@string/split</item>
    </array>

    	<!--Drawer Related Strings-->

    <string name="profile">Profile</string>
    <string name="contact_and_circle">Contact &amp; Circles</string>
    <string name="report">Report</string>
    <string name="share">Share</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_home">Home Activity</string>

    <array name="drawer_list">
        <item>@string/diary</item>
        <item>@string/income</item>
        <item>@string/expense</item>
        <item>@string/borrowed</item>
        <item>@string/lended</item>
        <item>@string/contact_and_circle</item>
        <item>@string/action_settings</item>
        <item>@string/profile</item>
        <item>@string/report</item>
        <item>@string/share</item>
        <item>@string/activity_contact_us</item>
    </array>
    <string name="title_activity_new_home">NewHomeActivity</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >People</item>
        <item >Settings</item>
        <item >Notifications</item>
        <item >Profile</item>
        <item >Developers</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/home_icon</item>
        <item>@drawable/home_icon</item>
        <item>@drawable/home_icon</item>
        <item>@drawable/home_icon</item>
        <item>@drawable/home_icon</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="actvity_manage_circle">Manage Circle</string>

    <string name="action_save">SAVE</string>
    <string name="action_create">CREATE</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_continue">CONTINUE</string>

    <string name="holder_id">holder id</string>
    <string name="circle_member_id">member id</string>

    <string name="circle_name">Circle Name</string>
    <string name="enter_new_circle_name">Enter New Circle Name</string>
    <string name="action_add_member">Add Member</string>
    <string name="no_member">No Member</string>

    <string name="action_search_hint">Search..</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_money_circle_welcome">Money Circle</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="title_activity_contact_detail">ContactDetailActivity                </string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_frequent_items">Frequent Items</string>

    <string name="facebook_app_id">395952043947470</string>

</resources>
