<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dull_white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_dailyReminderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_forward"
            android:drawableRight="@drawable/ic_forward"
            android:padding="12dp"
            android:text="@string/daily_reminder_setting" />

        <TextView
            android:id="@+id/tv_passwordId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_forward"
            android:drawableRight="@drawable/ic_forward"
            android:padding="12dp"
            android:text="@string/password_setting" />

        <TextView
            android:id="@+id/tv_categoriesId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_forward"
            android:drawableRight="@drawable/ic_forward"
            android:padding="12dp"
            android:text="@string/categories_setting" />

        <TextView
            android:id="@+id/tv_profileId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_forward"
            android:drawableRight="@drawable/ic_forward"
            android:padding="12dp"
            android:text="@string/profile_setting" />

    </LinearLayout>

</LinearLayout>